Add test coverage for PerformanceTestController, RestTaskExecutor, ProcessEngine, KafkaConfig, KafkaCheckpointSink, JpaProcessInstanceStorage
- PerformanceTestController: executor factory for testability, @Autowired on main constructor
- PerformanceTestControllerInterruptTest: tests InterruptedException paths (lines 57-59, 65-68)
- RestTaskExecutorTest: 4xx/5xx responses, apikey header, unsupported auth, null config, blank URL
- KafkaConfigTest: verifies beans load when bpmn.kafka.enabled and checkpoint-enabled
- ProcessEngineTest: getInstancesPage, getAllInstances, getPendingUserTaskId, worker without registration, restartFailedInstance missing failedAtNodeId, intermediateThrowEvent signalRef
- KafkaCheckpointSinkTest: empty task records payload
- JpaProcessInstanceStorageActiveHistoryTest: saveTaskExecutions null/empty

Made-with: Cursor